--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,8 +1,145 @@
-/*
-Colors:
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-Text: 1A1A1A
-Green: #00B172
-White: #FFF
+body{
+    /*background-color: bisque;*/
 
-*/
+}
+header {
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 40px;
+}
+
+
+nav{
+    /*background-color: blueviolet;*/
+    display: flex;
+    align-items: center;
+
+}
+
+.navegacion{
+    /*background-color: aqua;*/
+    font-size: 25px;
+    display: flex;
+    gap: 30px;
+}
+
+li{
+    list-style: none;
+}
+
+.portada{
+    height: 850px;
+    background-image: url("../images/landing.jpg");
+    background-size: 100% 100%;
+    display: grid;
+    align-content: center;
+    gap: 25px;
+}
+
+h1{
+    font-size: 80px;
+    font-weight:lighter;
+    color: white;
+    text-align: center;
+}
+
+.texto1{
+    font-size: 35px;
+    color: white;
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
+    color: black;
+    font-size: 40px;
+    text-decoration: underline;
+    text-decoration-color:#00B172;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.contenido1 {
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 75px;
+    padding-bottom: 75px;
+    align-items: baseline;
+    
+}
+
+.figura{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+}
+
+.figura h3 {
+    text-align: center;
+    color:#00B172;
+    font-size: 30px;
+}
+
+.figura p{
+    font-size: 25px;
+    color: black;
+    text-align: center;
+}
+
+.contenido2 {
+    height: 800px;
+    background-color: #00B172;
+    margin-left: 35px;
+    margin-right: 35px;
+    padding: 70px 80px 70px 80px;
+    
+    margin-bottom: 20px;
+    
+}
+
+.contenido3 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.contenido2 h3 {
+    color: white;
+    font-size: 40px;
+    text-decoration: underline;
+    text-align: left;
+}
+
+.contenedor-texto {
+    display: flex;
+    flex-direction: column;
+    gap: 45px;
+    margin-top: 50px;
+
+}
+
+h4 {
+    color: white;
+    font-size: 30px;
+}
+
+.texto2 {
+    text-align: left;
+    color: white;
+    font-size: 25px;
+}
+
+.orienta-imagen{
+    display: flex;
+    align-items: center;
+}
+footer{
+    text-align: center;
+}
