fijar posicion header

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -16,6 +16,8 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 15px 40px;
+    position: fixed;
+    width: 100%;
 }
 
 
