--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -33,14 +33,24 @@ nav{
     /*background-color: aqua;*/
     font-size: 25px;
     display: flex;
-    gap: 30px;
+    gap: 30px;  
 }
 
+
+.navegacion li a:hover {
+    background-color: #00B172;
+    color: white;
+}
 
 li{
-    list-style: none;
+    list-style: none; 
 }
 
+
+a{
+    color: black;
+    text-decoration: none;
+}
 
 .portada{
     height: 850px;
@@ -116,15 +126,16 @@ h2 {
     margin-left: 35px;
     margin-right: 35px;
     padding: 70px 80px 70px 80px;
-    
     margin-bottom: 20px;
-    
+    display: flex;
+    flex-direction: column;
 }
 
 
 .contenido3 {
     display: flex;
     justify-content: space-between;
+    height: 800px;
 }
 
 
